--- a/VsCodeExtension/Server/server.fsproj
+++ b/VsCodeExtension/Server/server.fsproj
@@ -1,15 +1,17 @@
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-	<PropertyGroup>
-		<OutputType>Exe</OutputType>
-		<TargetFramework>net6.0</TargetFramework>
-	</PropertyGroup>
-	<ItemGroup>
-		<Compile Include="Program.fs" />
-	</ItemGroup>
-	<ItemGroup>
-	  <PackageReference Include="Ionide.LanguageServerProtocol" Version="0.4.14" />
-	</ItemGroup>
-	<ItemGroup>
-	  <PackageReference Update="FSharp.Core" Version="7.0.300-beta.23127.2" />
-	</ItemGroup>
+
+  <PropertyGroup>
+    <OutputType>Exe</OutputType>
+	<TargetFramework>net6.0</TargetFramework>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Include="Core.fs" />
+    <Compile Include="Program.fs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Ionide.LanguageServerProtocol" Version="0.4.14" />
+  </ItemGroup>
 </Project>
