--- a/Project/poke.fsproj
+++ b/Project/poke.fsproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
 		<TargetFramework>net6.0</TargetFramework>
@@ -7,9 +7,9 @@
 		<Compile Include="Program.fs" />
 	</ItemGroup>
 	<ItemGroup>
-	  <PackageReference Include="Microsoft.CodeAnalysis" Version="4.6.0-1.final" />
+	  <PackageReference Include="Microsoft.CodeAnalysis" Version="4.6.0" />
 	</ItemGroup>
 	<ItemGroup>
-	  <PackageReference Update="FSharp.Core" Version="7.0.300-beta.23127.2" />
+	  <PackageReference Update="FSharp.Core" Version="7.0.300" />
 	</ItemGroup>
 </Project>
