--- a/Tests/Tests.fsproj
+++ b/Tests/Tests.fsproj
@@ -5,24 +5,24 @@
 		<GenerateProgramFile>false</GenerateProgramFile>
 	</PropertyGroup>
 	<ItemGroup>
-		<Compile Include="Tests.fs" />
+		<Compile Include="VsCodeExtension\ServerTests.fs" />
+		<Compile Include="PokeTests.fs" />
 		<Compile Include="Program.fs" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="FluentAssertions" Version="6.6.0" />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
-		<PackageReference Include="xunit" Version="2.4.1" />
-		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
+		<PackageReference Include="FluentAssertions" Version="6.11.0" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
+		<PackageReference Include="xunit" Version="2.4.2" />
+		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
-		<PackageReference Include="FsCheck" Version="2.16.4" />
-		<PackageReference Include="FsCheck.Xunit" Version="2.16.4" />
 	</ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\Project\poke.fsproj" />
+	  <ProjectReference Include="..\VsCodeExtension\Server\Server.fsproj" />
 	</ItemGroup>
 	<ItemGroup>
-	  <PackageReference Update="FSharp.Core" Version="7.0.300-beta.23127.2" />
+	  <PackageReference Update="FSharp.Core" Version="7.0.300" />
 	</ItemGroup>
 </Project>
