--- a/VsCodeExtension/Server/server.fsproj
+++ b/VsCodeExtension/Server/server.fsproj
@@ -13,5 +13,6 @@
 
   <ItemGroup>
     <PackageReference Include="Ionide.LanguageServerProtocol" Version="0.4.14" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.Common" Version="4.6.0" />
   </ItemGroup>
 </Project>
