--- a/Tests/Tests.fsproj
+++ b/Tests/Tests.fsproj
@@ -5,6 +5,7 @@
 		<GenerateProgramFile>false</GenerateProgramFile>
 	</PropertyGroup>
 	<ItemGroup>
+		<Compile Include="VsCodeExtension\Requests.fs" />
 		<Compile Include="VsCodeExtension\ServerTests.fs" />
 		<Compile Include="PokeTests.fs" />
 		<Compile Include="Program.fs" />
