--- a/VsCodeExtension/Server/server.fsproj
+++ b/VsCodeExtension/Server/server.fsproj
@@ -12,7 +12,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Ionide.LanguageServerProtocol" Version="0.4.14" />
     <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.Common" Version="4.6.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\LanguageServerProtocol\src\Ionide.LanguageServerProtocol.fsproj" />
   </ItemGroup>
 </Project>
