--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,7 +18,17 @@
         {
             "name": ".NET Core Attach",
             "type": "coreclr",
-            "request": "attach"
+            "request": "attach",
+            "justMyCode": false,
+            "suppressJITOptimizations": true,
+            "sourceLinkOptions": {
+                "*": { "enabled": true }
+            },
+            "symbolOptions": {
+                "searchMicrosoftSymbolServer": true,
+                "searchNuGetOrgSymbolServer": true,
+                "cachePath": "C:/symbols",
+            }
         }
     ]
 }
