--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,53 +3,55 @@
     // for the documentation about the tasks.json format
     "version": "2.0.0",
     "tasks": [
-        {
-            "label": "build",
-            "command": "dotnet",
-            "type": "shell",
-            "args": [
-                "build",
-                // Ask dotnet build to generate full paths for file names.
-                "/property:GenerateFullPaths=true",
-                // Do not generate summary otherwise it leads to duplicate errors in Problems panel
-                "/consoleloggerparameters:NoSummary"
-            ],
-            "group": "build",
-            "presentation": {
-                "reveal": "silent"
-            },
-            "problemMatcher": "$msCompile"
+      {
+        "label": "build",
+        "command": "dotnet",
+        "type": "shell",
+        "args": [
+          "build",
+          "/property:GenerateFullPaths=true",
+          "/consoleloggerparameters:NoSummary"
+        ],
+        "group": "build",
+        "presentation": {
+          "reveal": "silent"
         },
-        {
-            "label": "run tests",
-            "command": "dotnet",
-            "type": "shell",
-            "args": [
-              "test",
-              "/property:GenerateFullPaths=true",
-              "/consoleloggerparameters:NoSummary"
-            ],
-            "options": {
-              "cwd": "${workspaceFolder}/test",
-            },
-            "problemMatcher": "$msCompile"
+        "problemMatcher": "$msCompile"
+      },
+      {
+        "label": "run tests",
+        "command": "dotnet",
+        "type": "shell",
+        "args": [
+          "test",
+          "/property:GenerateFullPaths=true",
+          "/consoleloggerparameters:NoSummary"
+        ],
+        "options": {
+          "cwd": "${workspaceFolder}/test"
         },
-        {
-            "label": "debug tests",
-            "command": "dotnet",
-            "type": "shell",
-            "args": [
-              "test",
-              "/property:GenerateFullPaths=true",
-              "/consoleloggerparameters:NoSummary"
-            ],
-            "options": {
-              "cwd": "${workspaceFolder}/test",
-              "env": {
-                "VSTEST_HOST_DEBUG": "1"
-              }
-            },
-            "problemMatcher": "$msCompile"
-        }
+        "problemMatcher": "$msCompile"
+      },
+      {
+        "label": "debug tests",
+        "command": "dotnet",
+        "type": "shell",
+        "args": [
+          "test",
+          "--filter",
+          "\"server responds with data when requesting textDocument/hover\"",
+          "/property:GenerateFullPaths=true",
+          "/consoleloggerparameters:NoSummary"
+        ],
+        "options": {
+          "cwd": "${workspaceFolder}/Tests",
+          "env": {
+            "VSTEST_HOST_DEBUG": "1",
+            "COMPlus_ZapDisable": "1",
+            "COMPlus_ReadyToRun": "0"
+          }
+        },
+        "problemMatcher": "$msCompile"
+      }
     ]
 }
