--- a/Project/poke.fsproj
+++ b/Project/poke.fsproj
@@ -7,7 +7,17 @@
 		<Compile Include="Program.fs" />
 	</ItemGroup>
 	<ItemGroup>
+	  <PackageReference Include="Microsoft.Build" Version="17.3.2">
+	    <ExcludeAssets>runtime</ExcludeAssets>
+	  </PackageReference>
+	  <PackageReference Include="Microsoft.Build.Framework" Version="17.3.2">
+	    <ExcludeAssets>runtime</ExcludeAssets>
+	  </PackageReference>
+	  <PackageReference Include="Microsoft.Build.Locator" Version="1.5.5" />
 	  <PackageReference Include="Microsoft.CodeAnalysis" Version="4.6.0" />
+	  <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.6.0" />
+	  <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.Common" Version="4.6.0" />
+	  <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="4.6.0" />
 	</ItemGroup>
 	<ItemGroup>
 	  <PackageReference Update="FSharp.Core" Version="7.0.300" />
