--- a/Tests/Tests.fsproj
+++ b/Tests/Tests.fsproj
@@ -5,6 +5,7 @@
 		<GenerateProgramFile>false</GenerateProgramFile>
 	</PropertyGroup>
 	<ItemGroup>
+		<Compile Include="Poke\InstantiatedTests.fs" />
 		<Compile Include="Poke\DeclaredTests.fs" />
 		<Compile Include="Poke\PokeTests.fs" />
 		<Compile Include="VsCodeExtension\Requests.fs" />
